@@ -1,7 +1,9 @@
-@comment $NetBSD: PLIST,v 1.3 2003/10/14 23:46:46 hubertf Exp $
+@comment $NetBSD$
 bin/ipv6calc
+bin/ipv6loganon
 bin/ipv6logconv
 bin/ipv6logstats
 man/man8/ipv6calc.8
+man/man8/ipv6loganon.8
 man/man8/ipv6logconv.8
 man/man8/ipv6logstats.8
