@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.13 2005/11/08 21:50:15 hubertf Exp $
+$NetBSD: distinfo,v 1.14 2006/08/28 22:02:51 hubertf Exp $
 
-SHA1 (ipv6calc-0.61.0.tar.gz) = c31b03a102ef62edccffb3eb5c042b616ef0cf2c
-RMD160 (ipv6calc-0.61.0.tar.gz) = dc5a8e76cd49a813e5205430f11b41f60591cd30
-Size (ipv6calc-0.61.0.tar.gz) = 545036 bytes
+SHA1 (ipv6calc-0.72.1.tar.gz) = 9a8de514fd9806d97b74cc3f2fda042c33c29961
+RMD160 (ipv6calc-0.72.1.tar.gz) = 3c52b49ff7a99cd7b3d5dc01e67ba955dd4a7b73
+Size (ipv6calc-0.72.1.tar.gz) = 549732 bytes
