@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2009,v 1.200 2009/01/12 22:12:08 abs Exp $
+$NetBSD: CHANGES-2009,v 1.201 2009/01/12 22:21:09 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2009:
 
@@ -275,3 +275,4 @@ Changes to the packages collection and infrastructure in 2009:
 	Updated textproc/gnome-doc-utils to 0.14.2 [wiz 2009-01-12]
 	Updated devel/cpuflags to 1.34 [abs 2009-01-12]
 	Updated misc/gnome-user-docs to 2.24.2 [wiz 2009-01-12]
+	Updated net/ipv6calc to 0.72.1 [hubertf 2009-01-12]
